--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ dependencies {
 	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
 	testImplementation 'org.hamcrest:hamcrest:2.1'
 	testImplementation 'org.hamcrest:hamcrest-library:2.1'
+	
+	compile 'io.projectreactor:reactor-core:+'
+	testCompile 'io.projectreactor:reactor-test:+'
+	
 }
 
 test {
