--- a/build.gradle
+++ b/build.gradle
@@ -10,13 +10,15 @@ compileJava {
  
 repositories {
     mavenCentral()
+    jcenter()
 }
  
 dependencies {
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
-	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
-	testImplementation 'org.hamcrest:hamcrest:2.1'
-	testImplementation 'org.hamcrest:hamcrest-library:2.1'
+	testCompile 'org.junit.jupiter:junit-jupiter-api:5.6.1'
+	testCompile 'org.junit.jupiter:junit-jupiter-engine:5.6.1'
+	testCompile 'org.hamcrest:hamcrest:2.2'
+	testCompile 'org.hamcrest:hamcrest-library:2.2'
+	testCompile 'org.mockito:mockito-core:3.3.3'
 	
 	compile 'io.projectreactor:reactor-core:+'
 	testCompile 'io.projectreactor:reactor-test:+'
